--- a/mago.toml
+++ b/mago.toml
@@ -22,8 +22,8 @@ halstead = { effort-threshold = 7000 }
 
 [analyzer]
 find-unused-definitions = true
-find-unused-expressions = false
-analyze-dead-code = false
-check-throws = true
+find-unused-expressions = true
+analyze-dead-code = true
+check-throws = false
 allow-possibly-undefined-array-keys = true
 perform-heuristic-checks = true
