--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Build documentation
         run: cd docs && bun run build
 
+      - name: Add .nojekyll file
+        run: touch docs/dist/.nojekyll
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
