--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,23 +2,20 @@ name: Deploy Documentation
 
 on:
   push:
-    branches: ['docs', 'main']
+    branches: ['main']
     paths: ['docs/**']
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     steps:
@@ -47,7 +44,6 @@ jobs:
         with:
           path: docs/dist
 
-  # Deployment job
   deploy:
     environment:
       name: github-pages
